@@ -1,3 +1,8 @@
+2011-12-06  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/matrix.R (termFreq): Allow reordering of control option
+	processing.
+
 2011-11-17  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/reader.R (readPDF): Use tools:::pdf_info() instead of external
